# TypeTheoryPresentation

./: .gitignore  README.md  shell.nix
c-samples/: counter.c
presentation/: bib.bib  rust.tex
rust-samples/: Cargo.toml
rust-samples/src/: borrowing.rs  channels.rs  ownership_borrow.rs  ownership_move.rs  ownership_thread.rs  shmem_arc.rs  shmem_initial.rs  shmem_rc.rs  thread_basic.rs  traits.rs
